--- a/GtkDateTimePicker/GtkDateTimePicker.csproj
+++ b/GtkDateTimePicker/GtkDateTimePicker.csproj
@@ -16,4 +16,10 @@
         <PackageReference Include="GtkSharp" Version="3.24.24.34" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\README.md">
+        <Link>README.md</Link>
+      </Content>
+    </ItemGroup>
+
 </Project>
